<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddFoodActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/add_food"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <RadioGroup
        android:id="@+id/rgTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName">

        <RadioButton
            android:id="@+id/rbAlmuerzo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/almuerzo"
            android:textSize="10pt" />

        <RadioButton
            android:id="@+id/rbCena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cena"
            android:textSize="10pt" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rgType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgTime">

        <RadioButton
            android:id="@+id/rbLegumbres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/legumbre"
            android:textSize="10pt" />

        <RadioButton
            android:id="@+id/rbPescado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pescado"
            android:textSize="10pt" />

        <RadioButton
            android:id="@+id/rbCarne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carne"
            android:textSize="10pt" />
    </RadioGroup>

    <Button
        android:id="@+id/btIngr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:paddingLeft="6dip"
        android:paddingRight="6dip"
        android:text="@string/add_ingr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgType" />

    <TextView
        android:id="@+id/tvIngredients"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center_vertical"
        android:paddingLeft="6dip"
        android:paddingRight="6dip"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        app:layout_constraintTop_toBottomOf="@+id/rgType"/>

    <Button
        android:id="@+id/btnAddData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btIngr" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAddData"
        app:layout_constraintTop_toBottomOf="@+id/btIngr" />

</androidx.constraintlayout.widget.ConstraintLayout>