<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:stretchColumns="0,1,2">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">

            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/l"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLunesLunch"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tvLunesDinner"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">

            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/m"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMartesLunch"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tvMartesDinner"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">

            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/x"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMiercolesLunch"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tvMiercolesDinner"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">

            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/j"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvJuevesLunch"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tvJuevesDinner"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">

            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/v"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvViernesLunch"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tvViernesDinner"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">

            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/s"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSabadoLunch"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tvSabadoDinner"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">

            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/d"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDomingoLunch"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tvDomingoDinner"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>
    </TableLayout>

</LinearLayout>